--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <a href="">Experience</a>
         <a href="">About</a>
       </nav>
-  </header>   
+  </header> 
+  <section class="home">
+    <div class="home-image">
+      <img src="file (1).jpg" alt="snow mountain">
+    </div>
+    <div class="home-content">
+      <h1>Welcome! I’m <span>Suyao</span></h1>
+      <h2>a passionate designer with a flair for illustration, digital interfaces, and visual storytelling. Dive into my portfolio to see how I turn ideas into engaging, impactful designs.</h2>
+    </div>
+  </section>
 	</body>
 </html>
